# fastapi-working-with-files

./: .gitignore  Dockerfile  README.md  READMY.md  constants.py  db.py  docker-compose.yml  main.py  pyproject.toml
api/: catalog.py  read_file.py  routers.py  user.py
managers/: catalog.py  user.py
migrations/: env.py
migrations/versions/: 33d65fa944a1_initial.py  962b61598c6b_initial.py
models/: __init__.py  base.py  catalog.py  enums.py  user.py
schemas/request/: user.py
schemas/response/: catalog.py  user.py
scripts/: run-local.sh
services/: age.py  files.py
