[tool.poetry]
name = "rexit"
version = "0.1.0"
description = ""
authors = ["Vladyslav Koliesov <kolesov0703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
databases = "^0.8.0"
python-decouple = "^3.8"
aiofiles = "^23.2.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
